[requires.io] dependency update

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
 [testenv:flake8]
 deps = flake8==3.8.4
 commands =
-  flake8 --jobs 8 mitmproxy pathod examples test release
+  flake8 --jobs 8 mitmproxy pathod examples test release {posargs}
 
 [testenv:filename_matching]
 commands =
@@ -26,18 +26,18 @@ commands =
 [testenv:mypy]
 deps = mypy==0.790
 commands =
-  mypy .
+  mypy . {posargs}
 
 [testenv:rstcheck]
 deps = rstcheck>=2.2,<4.0
 commands =
-  rstcheck README.rst
+  rstcheck README.rst {posargs}
 
 [testenv:individual_coverage]
 deps =
   -rrequirements.txt
 commands =
-  python ./test/individual_coverage.py
+  python ./test/individual_coverage.py {posargs}
 
 [testenv:cibuild]
 passenv = CI_* GITHUB_* AWS_* TWINE_* DOCKER_*
