sans-io adjustments

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
   flake8 --jobs 8 mitmproxy pathod examples test release {posargs}
 
 [testenv:filename_matching]
+deps =
 commands =
   python ./test/filename_matching.py
 
