[sans-io] add clientplayback tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,9 +56,11 @@ exclude =
 
 [tool:individual_coverage]
 exclude =
+    mitmproxy/addons/clientplayback.py
     mitmproxy/addons/onboardingapp/app.py
     mitmproxy/addons/session.py
     mitmproxy/addons/termlog.py
+    mitmproxy/connections.py
     mitmproxy/contentviews/base.py
     mitmproxy/controller.py
     mitmproxy/ctx.py
