[sans-io] add mode tests, minor fixes

--- a/setup.cfg
+++ b/setup.cfg
@@ -94,6 +94,8 @@ exclude =
     mitmproxy/proxy/protocol/tls.py
     mitmproxy/proxy/root_context.py
     mitmproxy/proxy/server.py
+    mitmproxy/proxy2/server.py
+    mitmproxy/proxy2/layers/tls.py
     mitmproxy/utils/bits.py
     pathod/language/actions.py
     pathod/language/base.py
