--- a/tox.ini
+++ b/tox.ini
@@ -10,14 +10,14 @@ setenv = HOME = {envtmpdir}
 commands =
   mitmdump --version
   pytest --timeout 60 -vv --cov-report xml \
-    --cov=mitmproxy --cov=pathod --cov=release \
-    --full-cov=mitmproxy/ --full-cov=pathod/ \
+    --cov=mitmproxy --cov=release \
+    --full-cov=mitmproxy/ \
     {posargs}
 
 [testenv:flake8]
 deps = flake8==3.8.4
 commands =
-  flake8 --jobs 8 mitmproxy pathod examples test release {posargs}
+  flake8 --jobs 8 mitmproxy examples test release {posargs}
 
 [testenv:filename_matching]
 deps =
@@ -59,8 +59,6 @@ commands =
   mitmproxy --version
   mitmdump --version
   mitmweb --version
-  pathod --version
-  pathoc --version
 
 [testenv:docs]
 passenv = GITHUB_* AWS_*
