--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 max-line-length = 140
 max-complexity = 25
 ignore = E251,E252,C901,W292,W503,W504,W605,E722,E741,E126,F541
-exclude = mitmproxy/contrib/*,test/mitmproxy/data/*,release/build/*,mitmproxy/io/proto/*
+exclude = mitmproxy/contrib/*,test/mitmproxy/data/*,release/build/*
 addons = file,open,basestring,xrange,unicode,long,cmp
 
 [tool:pytest]
@@ -40,12 +40,8 @@ exclude =
     mitmproxy/tools/
     release/hooks
 
-
 [tool:individual_coverage]
 exclude =
-    mitmproxy/addons/clientplayback.py
-    mitmproxy/addons/onboardingapp/app.py
-    mitmproxy/addons/session.py
     mitmproxy/addons/termlog.py
     mitmproxy/connections.py
     mitmproxy/contentviews/base.py
@@ -53,9 +49,7 @@ exclude =
     mitmproxy/ctx.py
     mitmproxy/exceptions.py
     mitmproxy/flow.py
-    mitmproxy/io/db.py
     mitmproxy/io/io.py
-    mitmproxy/io/protobuf.py
     mitmproxy/io/tnetstring.py
     mitmproxy/log.py
     mitmproxy/master.py
