--- a/tox.ini
+++ b/tox.ini
@@ -10,12 +10,15 @@ setenv = HOME = {envtmpdir}
 commands =
   mitmdump --version
   pytest --timeout 60 -vv --cov-report xml \
+    --continue-on-collection-errors \
     --cov=mitmproxy --cov=release \
     --full-cov=mitmproxy/ \
     {posargs}
 
 [testenv:flake8]
-deps = flake8==3.8.4
+deps =
+  flake8>=3.8.4,<4
+  flake8-tidy-imports>=4.2.0,<5
 commands =
   flake8 --jobs 8 mitmproxy examples test release {posargs}
 
@@ -30,7 +33,7 @@ commands =
   mypy . {posargs}
 
 [testenv:rstcheck]
-deps = rstcheck>=2.2,<4.0
+deps = rstcheck>=3.3.1,<4
 commands =
   rstcheck README.rst {posargs}
 
