--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ exclude =
 
 [tool:individual_coverage]
 exclude =
+    mitmproxy/addons/onboarding.py
     mitmproxy/addons/termlog.py
     mitmproxy/connections.py
     mitmproxy/contentviews/base.py
