[requires.io] dependency update

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ toxworkdir={env:TOX_WORK_DIR:.tox}
 
 [testenv]
 deps =
-  -rrequirements.txt
+  -e .[dev]
 setenv = HOME = {envtmpdir}
 commands =
   mitmdump --version
@@ -33,15 +33,13 @@ commands =
   mypy . {posargs}
   
 [testenv:individual_coverage]
-deps =
-  -rrequirements.txt
 commands =
   python ./test/individual_coverage.py {posargs}
 
 [testenv:cibuild]
 passenv = CI_* GITHUB_* AWS_* TWINE_* DOCKER_*
 deps =
-  -rrequirements.txt
+  -e .[dev]
   pyinstaller==4.2
   twine==3.3.0
   awscli
@@ -61,7 +59,7 @@ commands =
 [testenv:docs]
 passenv = GITHUB_* AWS_*
 deps =
-  -rrequirements.txt
+  -e .[dev]
   awscli
 changedir = docs
 commands =
