--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ exclude_lines =
 
 [mypy]
 ignore_missing_imports = True
+files = mitmproxy,examples/addons,release
 
 [mypy-mitmproxy.contrib.*]
 ignore_errors = True
