--- a/tox.ini
+++ b/tox.ini
@@ -28,9 +28,9 @@ commands =
   python ./test/filename_matching.py
 
 [testenv:mypy]
-deps = mypy==0.790
+deps = mypy==0.800
 commands =
-  mypy . {posargs}
+  mypy {posargs}
   
 [testenv:individual_coverage]
 commands =
