--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands =
 [testenv:mypy]
 deps = mypy==0.800
 commands =
-  mypy . {posargs}
+  mypy {posargs}
   
 [testenv:individual_coverage]
 commands =
