--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,10 @@ ignore_errors = True
 [mypy-test.*]
 ignore_errors = True
 
+# https://github.com/python/mypy/issues/3004
+[mypy-http-modify-form,http-trailers]
+ignore_errors = True
+
 [tool:full_coverage]
 exclude =
     mitmproxy/tools/
