Use `python -m` to run freshly installed `pipenv`

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,10 +71,10 @@ jobs:
       - run: printenv
       - uses: actions/checkout@v2
       - run: pip install pipenv
-      - run: pipenv install
+      - run: python -m pipenv install
       - run: |
           ln -sr test/conftest.py examples/
-          pipenv run pytest examples/
+          python -m pipenv run pytest examples/
 
   build-wheel:
     runs-on: ubuntu-latest
