No need in `pipenv` in isolated runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,11 +70,10 @@ jobs:
     steps:
       - run: printenv
       - uses: actions/checkout@v2
-      - run: pip install pipenv
-      - run: python -m pipenv install -e .
+      - run: pip install pytest -e ".[dev]"
       - run: |
           ln -sr test/conftest.py examples/
-          python -m pipenv run pytest examples/
+          pytest examples/
 
   build-wheel:
     runs-on: ubuntu-latest
