--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
       - run: pip install pytest -e ".[dev]"
       - run: |
           ln -sr test/conftest.py examples/
-          python -m pytest examples/
+          python -m pytest --continue-on-collection-errors examples/
 
   build-wheel:
     runs-on: ubuntu-latest
