run most common tests only when invoking `tox` without args.
envlist never really included the full list of environments,
for example cibuild was already missing. This commit tries to
make a reasonable tradeoff between comprehensiveness and local running time
by only running the most frequent error sources.

We still check everything in CI.

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38, py39, flake8, filename_matching, mypy, individual_coverage, docs
+envlist = py, flake8, mypy
 skipsdist = True
 toxworkdir={env:TOX_WORK_DIR:.tox}
 
