Switching from Alpine Linux to Debian Buster

--- a/release/docker/Dockerfile
+++ b/release/docker/Dockerfile
@@ -1,6 +1,4 @@
-FROM alpine:3.12
-
-ENV LANG=en_US.UTF-8
+FROM python:3.9-buster
 
 ARG WHEEL_MITMPROXY
 ARG WHEEL_BASENAME_MITMPROXY
@@ -9,27 +7,24 @@ COPY $WHEEL_MITMPROXY /home/mitmproxy/
 
 # Add our user first to make sure the ID get assigned consistently,
 # regardless of whatever dependencies get added.
-RUN addgroup -S mitmproxy && adduser -S -G mitmproxy mitmproxy \
-    && apk add --no-cache \
-        su-exec \
+RUN groupadd mitmproxy && useradd mitmproxy -g mitmproxy\
+    && apt-get update \
+    && apt-get install -y\
         git \
         g++ \
-        libffi \
         libffi-dev \
-        libstdc++ \
         openssl \
-        openssl-dev \
-        python3 \
-        python3-dev \
+        libssl-dev \
     && python3 -m ensurepip --upgrade \
     && pip3 install -U pip \
     && LDFLAGS=-L/lib pip3 install -U /home/mitmproxy/${WHEEL_BASENAME_MITMPROXY} \
-    && apk del --purge \
+    && apt-get remove --purge -y \
         git \
         g++ \
         libffi-dev \
-        openssl-dev \
+        libssl-dev \
         python3-dev \
+    && apt-get -y autoremove && apt-get -y clean && rm -rf /var/lib/apt/lists/* \
     && rm -rf ~/.cache/pip /home/mitmproxy/${WHEEL_BASENAME_MITMPROXY}
 
 VOLUME /home/mitmproxy/.mitmproxy
