temporarily enable docker CI for pull requests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,7 +149,6 @@ jobs:
 
   # Separate from everything else because slow.
   build-and-deploy-docker:
-    if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
     needs: [test, test-web-ui, build-wheel]
     runs-on: ubuntu-latest
     env:
@@ -167,7 +166,7 @@ jobs:
           name: wheel
           path: release/dist
       - run: tox -e cibuild -- build
-      - run: tox -e cibuild -- upload
+      #- run: tox -e cibuild -- upload
 
   deploy:
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
