--- a/release/docker/Dockerfile
+++ b/release/docker/Dockerfile
@@ -1,16 +1,15 @@
 FROM python:3.9-slim-buster
 
-ARG WHEEL_MITMPROXY
-ARG WHEEL_BASENAME_MITMPROXY
+ARG MITMPROXY_WHEEL
 
 RUN useradd -mU mitmproxy
 RUN apt-get update \
     && apt-get install -y gosu \
     && rm -rf /var/lib/apt/lists/*
     
-COPY $WHEEL_MITMPROXY /home/mitmproxy/
-RUN pip3 install --no-cache-dir -U /home/mitmproxy/${WHEEL_BASENAME_MITMPROXY} \
-    && rm -rf /home/mitmproxy/${WHEEL_BASENAME_MITMPROXY}
+COPY $MITMPROXY_WHEEL /home/mitmproxy/
+RUN pip3 install --no-cache-dir -U /home/mitmproxy/${MITMPROXY_WHEEL} \
+    && rm -rf /home/mitmproxy/${MITMPROXY_WHEEL}
 
 VOLUME /home/mitmproxy/.mitmproxy
 
