Set jest time zone, otherwise the test will fail in other time zones

--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "name": "mitmproxy",
   "private": true,
   "scripts": {
-    "test": "jest --coverage",
+    "test": "TZ=UTC jest --coverage",
     "build": "gulp prod",
     "start": "gulp"
   },
