--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,10 @@
     ],
     "collectCoverageFrom": [
       "src/js/**/*.{js,jsx}"
+    ],
+    "automock": false,
+    "setupFiles": [
+      "./setupJest.js"
     ]
   },
   "dependencies": {
@@ -29,6 +33,7 @@
     "mock-xmlhttprequest": "^1.1.0",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
+    "react-clipboard.js": "^2.0.16",
     "react-codemirror": "^1.0.0",
     "react-dom": "16.0.0",
     "react-redux": "^5.0.6",
@@ -64,6 +69,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-util": "^3.0.8",
     "jest": "^21.2.1",
+    "jest-fetch-mock": "^3.0.3",
     "uglifyify": "^4.0.4",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
