--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       - run: pip install tox
       - run: tox -e flake8
   filename-matching:
@@ -22,6 +24,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       - run: pip install tox
       - run: tox -e filename_matching
   mypy:
@@ -29,6 +33,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       - run: pip install tox
       - run: tox -e mypy
   individual-coverage:
@@ -36,6 +42,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       - run: pip install tox
       - run: tox -e individual_coverage
   test:
