--- a/tox.ini
+++ b/tox.ini
@@ -36,30 +36,12 @@ commands =
 commands =
   python ./test/individual_coverage.py {posargs}
 
-[testenv:cibuild]
-passenv = CI_* GITHUB_* AWS_* TWINE_* DOCKER_*
-deps =
-  -e .[dev]
-  pyinstaller==4.3
-  twine==3.4.1
-  awscli
-commands =
-  mitmdump --version
-  python ./release/cibuild.py {posargs}
-
 [testenv:wheeltest]
 recreate = True
 deps =
 commands =
-  pip install {posargs}
+  pip install --require-hashes -r release/pins/requirements-linux.txt
+  pip install --no-deps {posargs}
   mitmproxy --version
   mitmdump --version
   mitmweb --version
-
-[testenv:docs]
-passenv = GITHUB_* AWS_*
-deps =
-  -e .[dev]
-changedir = docs
-commands =
-  ./build.py
