--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: CI
 
-on: [push, pull_request]
+on: [ push, pull_request ]
+
+permissions:
+  contents: read
 
 jobs:
   lint-pr:
@@ -9,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: TrueBrain/actions-flake8@9a43ff1b2c7b96f3edffc48a49973ce3de116ba1
+        # mirrored at https://github.com/mitmproxy/mitmproxy/settings/actions
   lint-local:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
@@ -72,58 +76,18 @@ jobs:
           python-version: ${{ matrix.py }}
       - run: pip install tox
       - run: tox -e py
-      - uses: codecov/codecov-action@v1
+      - uses: codecov/codecov-action@a1ed4b322b4b38cb846afb5a0ebfa17086917d27
+        # mirrored below and at https://github.com/mitmproxy/mitmproxy/settings/actions
         with:
           file: ./coverage.xml
           name: ${{ matrix.os }}
-  build-wheel:
-    runs-on: ubuntu-latest
-    env:
-      CI_BUILD_WHEEL: 1
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-      - run: pip install tox
-      - run: tox -e cibuild -- build
-      - uses: actions/upload-artifact@v2
-        with:
-          name: wheel
-          path: release/dist
-  build-binaries:
-    strategy:
-      fail-fast: false
-      matrix:
-        # Old Ubuntu version for old glibc
-        os: [macos-10.15, windows-2019, ubuntu-16.04]
-    runs-on: ${{ matrix.os }}
-    env:
-      CI_BUILD_PYINSTALLER: 1
-      CI_BUILD_WININSTALLER: ${{ matrix.os == 'windows-2019' }}
-      CI_BUILD_KEY: ${{ secrets.CI_BUILD_KEY }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-      - if: matrix.os == 'windows-latest'
-        uses: actions/cache@v1
-        with:
-          path: release/installbuilder/setup
-          key: installbuilder
-      - run: pip install tox
-      - run: tox -e cibuild -- build
-      # artifacts must have different names, see https://github.com/actions/upload-artifact/issues/24
-      - uses: actions/upload-artifact@v2
-        with:
-          name: binaries.${{ matrix.os }}
-          path: release/dist
 
   test-web-ui:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
       - run: git rev-parse --abbrev-ref HEAD
       - uses: actions/setup-node@v1
       - id: yarn-cache
@@ -138,54 +102,95 @@ jobs:
         run: yarn
       - working-directory: ./web
         run: npm test
-      - uses: codecov/codecov-action@v1
+      - uses: codecov/codecov-action@a1ed4b322b4b38cb846afb5a0ebfa17086917d27
+        # mirrored above and at https://github.com/mitmproxy/mitmproxy/settings/actions
         with:
           file: ./web/coverage/coverage-final.json
           name: web
 
+# All actions below this line produce stuff that may eventually be deployed,
+# so we make sure to really pin everything here.
+
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image: macos-10.15
+            platform: macos
+          - image: windows-2019
+            platform: windows
+          - image: ubuntu-16.04  # Old Ubuntu version for old glibc
+            platform: linux
+    runs-on: ${{ matrix.image }}
+    env:
+      CI_BUILD_WHEEL: ${{ matrix.platform == 'linux' }}
+      CI_BUILD_PYINSTALLER: 1
+      CI_BUILD_WININSTALLER: ${{ matrix.platform == 'windows' }}
+      CI_BUILD_KEY: ${{ secrets.CI_BUILD_KEY }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - if: matrix.platform == 'windows'
+        uses: actions/cache@v2
+        with:
+          path: release/installbuilder/setup
+          key: installbuilder
+      - run: pip install -r release/pins/requirements-${{ matrix.platform }}.txt
+      - run: ./release/cibuild.py build
+      # artifacts must have different names, see https://github.com/actions/upload-artifact/issues/24
+      - uses: actions/upload-artifact@v2
+        with:
+          name: binaries.${{ matrix.platform }}
+          path: release/dist
+
   docs:
+    if: github.repository != 'mitmproxy/mitmproxy' || github.ref != 'refs/heads/main'
+    # mirrored below >>>
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - run: pip install -r release/pins/tox.txt
+      - run: pip install -r release/pins/requirements-linux.txt
       - run: |
           wget -q https://github.com/gohugoio/hugo/releases/download/v0.83.1/hugo_extended_0.83.1_Linux-64bit.deb
           echo "9487ea3b80f8ddd0ba600d42850b96b6a8b0bb9b41bc08cb285635ebbd41328d hugo_extended_0.83.1_Linux-64bit.deb" | sha256sum -c
           sudo dpkg -i hugo*.deb
-      - run: tox -e docs
-      - uses: actions/upload-artifact@v2
-        with:
-          name: docs
-          path: docs/public
+      - run: ./build.py
+        working-directory: docs
+    # <<<
 
   deploy-docs:
     if: github.repository == 'mitmproxy/mitmproxy' && github.ref == 'refs/heads/main'
     environment: deploy-docs
+    # mirrored above >>>
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - uses: actions/download-artifact@v2
-        with:
-          name: docs
-          path: docs/public
-      - run: pip install pip install -r release/pins/awscli.txt
-      - run: ./upload-dev.sh
+      - run: pip install -r release/pins/requirements-linux.txt
+      - run: |
+          wget -q https://github.com/gohugoio/hugo/releases/download/v0.83.1/hugo_extended_0.83.1_Linux-64bit.deb
+          echo "9487ea3b80f8ddd0ba600d42850b96b6a8b0bb9b41bc08cb285635ebbd41328d hugo_extended_0.83.1_Linux-64bit.deb" | sha256sum -c
+          sudo dpkg -i hugo*.deb
+      - run: ./build.py
         working-directory: docs
-    #env:
-    #  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    # <<<
+      - run: ./upload-dev.sh
 
   # Separate from everything else because slow.
   build-and-deploy-docker:
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
     environment: deploy-docker
-    needs: [test, test-web-ui, build-wheel]
+    needs: [ test, test-web-ui, build ]
     runs-on: ubuntu-latest
     env:
       CI_BUILD_DOCKER: 1
@@ -196,27 +201,27 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - run: pip install tox
       - uses: actions/download-artifact@v2
         with:
-          name: wheel
+          name: build.linux
           path: release/dist
-      - run: tox -e cibuild -- build
-      - run: tox -e cibuild -- upload
+      - run: pip install -r release/pins/requirements-linux.txt
+      - run: ./release/cibuild.py build
+      - run: ./release/cibuild.py upload
 
   deploy:
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
     environment: deploy
     runs-on: ubuntu-latest
-    needs: [test, test-web-ui, build-wheel, build-binaries]
+    needs: [test, test-web-ui, build]
     env:
       CI_BUILD_WHEEL: 1
       CI_BUILD_PYINSTALLER: 1
       CI_BUILD_WININSTALLER: 1
       TWINE_USERNAME: mitmproxy
-      TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+      #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -230,5 +235,5 @@ jobs:
       # and then delete the empty folders
       - run: find release/dist -type d -empty -delete
       - run: ls release/dist
-      - run: pip install tox
-      - run: tox -e cibuild -- upload
+      - run: pip install -r release/pins/requirements-linux.txt
+      - run: ./release/cibuild.py upload
