ci: streamline pinned install

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,8 +115,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - run: python -m pip install --require-hashes -r release/pins/requirements-linux.txt
-      - run: python -m pip install --no-deps -e .
+      - run: python release/pins/pip-install-pinned.py
       - run: |
           wget -q https://github.com/gohugoio/hugo/releases/download/v0.83.1/hugo_extended_0.83.1_Linux-64bit.deb
           echo "9487ea3b80f8ddd0ba600d42850b96b6a8b0bb9b41bc08cb285635ebbd41328d hugo_extended_0.83.1_Linux-64bit.deb" | sha256sum -c
@@ -138,8 +137,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - run: python -m pip install --require-hashes -r release/pins/requirements-linux.txt
-      - run: python -m pip install --no-deps -e .
+      - run: python release/pins/pip-install-pinned.py
       - run: |
           wget -q https://github.com/gohugoio/hugo/releases/download/v0.83.1/hugo_extended_0.83.1_Linux-64bit.deb
           echo "9487ea3b80f8ddd0ba600d42850b96b6a8b0bb9b41bc08cb285635ebbd41328d hugo_extended_0.83.1_Linux-64bit.deb" | sha256sum -c
@@ -178,8 +176,8 @@ jobs:
         with:
           path: release/installbuilder/setup
           key: installbuilder
-      - run: python -m pip install -r release/pins/requirements-${{ matrix.platform }}.txt
-      - run: python ./release/cibuild.py build
+      - run: python release/pins/pip-install-pinned.py
+      - run: python release/cibuild.py build
       # artifacts must have different names, see https://github.com/actions/upload-artifact/issues/24
       - uses: actions/upload-artifact@v2
         with:
@@ -205,10 +203,9 @@ jobs:
         with:
           name: build.linux
           path: release/dist
-      - run: python -m pip install --require-hashes -r release/pins/requirements-linux.txt
-      - run: python -m pip install --no-deps -e .
-      - run: python ./release/cibuild.py build
-      - run: python ./release/cibuild.py upload
+      - run: python release/pins/pip-install-pinned.py
+      - run: python release/cibuild.py build
+      - run: python release/cibuild.py upload
 
   deploy:
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
@@ -236,6 +233,5 @@ jobs:
       # and then delete the empty folders
       - run: find release/dist -type d -empty -delete
       - run: ls release/dist
-      - run: python -m pip install --require-hashes -r release/pins/requirements-linux.txt
-      - run: python -m pip install --no-deps -e .
-      - run: python ./release/cibuild.py upload
+      - run: python release/pins/pip-install-pinned.py
+      - run: python release/cibuild.py upload
