ci: minor fixes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,13 +74,15 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.py }}
-      - run: pip install tox
+      - run: pip install tox pip-tools
       - run: tox -e py
       - uses: codecov/codecov-action@a1ed4b322b4b38cb846afb5a0ebfa17086917d27
         # mirrored below and at https://github.com/mitmproxy/mitmproxy/settings/actions
         with:
           file: ./coverage.xml
           name: ${{ matrix.os }}
+      - run: python release/pins/make.py
+        # kept here so that we can copy configs from CI if necessary.
 
   test-web-ui:
     runs-on: ubuntu-latest
