--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,7 +120,7 @@ jobs:
           name: web
 
   docs:
-    if: github.repository != 'mitmproxy/mitmproxy' || github.ref != 'refs/heads/main'
+    if: github.repository != 'mitmproxy/mitmproxy' || github.ref != 'refs/heads/actions-hardening'
     # mirrored below >>>
     runs-on: ubuntu-latest
     steps:
@@ -143,7 +143,7 @@ jobs:
 # so we make sure to really pin everything here.
 
   deploy-docs:
-    if: github.repository == 'mitmproxy/mitmproxy' && github.ref == 'refs/heads/main'
+    if: github.repository == 'mitmproxy/mitmproxy' && github.ref == 'refs/heads/actions-hardening'
     environment: deploy-docs
     # mirrored above >>>
     runs-on: ubuntu-latest
