--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -225,7 +225,7 @@ jobs:
           python-version: '3.9'
       - uses: actions/download-artifact@v2
         with:
-          name: build.linux
+          name: binaries.linux
           path: release/dist
       - run: python release/pins/pip-install-pinned.py
       - run: python release/cibuild.py build
