--- a/release/docker/Dockerfile
+++ b/release/docker/Dockerfile
@@ -8,10 +8,8 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 COPY $MITMPROXY_WHEEL /home/mitmproxy/
-COPY requirements.txt /home/mitmproxy/
-RUN pip3 install --no-cache-dir --require-hashes -r /home/mitmproxy/requirements.txt \
-    && pip3 install --no-cache-dir --no-deps /home/mitmproxy/${MITMPROXY_WHEEL} \
-    && rm /home/mitmproxy/${MITMPROXY_WHEEL} /home/mitmproxy/requirements.txt
+RUN pip3 install --no-cache-dir -U /home/mitmproxy/${MITMPROXY_WHEEL} \
+    && rm -rf /home/mitmproxy/${MITMPROXY_WHEEL}
 
 VOLUME /home/mitmproxy/.mitmproxy
 
