--- a/tox.ini
+++ b/tox.ini
@@ -40,8 +40,7 @@ commands =
 recreate = True
 deps =
 commands =
-  pip install --require-hashes -r release/pins/requirements-linux.txt
-  pip install --no-deps {posargs}
+  pip install {posargs}
   mitmproxy --version
   mitmdump --version
   mitmweb --version
