--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,6 +92,44 @@ jobs:
           file: ./coverage.xml
           name: ${{ matrix.os }}
 
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image: macos-10.15
+            platform: macos
+          - image: windows-2019
+            platform: windows
+          - image: ubuntu-16.04  # Old Ubuntu version for old glibc
+            platform: linux
+    runs-on: ${{ matrix.image }}
+    env:
+      CI_BUILD_WHEEL: ${{ matrix.platform == 'linux' }}
+      CI_BUILD_PYINSTALLER: 1
+      CI_BUILD_WININSTALLER: ${{ matrix.platform == 'windows' }}
+      CI_BUILD_KEY: ${{ secrets.CI_BUILD_KEY }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+      - if: matrix.platform == 'windows'
+        uses: actions/cache@v2
+        with:
+          path: release/installbuilder/setup
+          key: installbuilder
+      - run: pip install -e .[dev]
+      - run: python release/cibuild.py build
+      # artifacts must have different names, see https://github.com/actions/upload-artifact/issues/24
+      - uses: actions/upload-artifact@v2
+        with:
+          name: binaries.${{ matrix.platform }}
+          path: release/dist
+
   test-web-ui:
     runs-on: ubuntu-latest
     steps:
@@ -138,49 +176,15 @@ jobs:
           name: docs
           path: docs/public
 
-  build:
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - image: macos-10.15
-            platform: macos
-          - image: windows-2019
-            platform: windows
-          - image: ubuntu-16.04  # Old Ubuntu version for old glibc
-            platform: linux
-    runs-on: ${{ matrix.image }}
-    env:
-      CI_BUILD_WHEEL: ${{ matrix.platform == 'linux' }}
-      CI_BUILD_PYINSTALLER: 1
-      CI_BUILD_WININSTALLER: ${{ matrix.platform == 'windows' }}
-      CI_BUILD_KEY: ${{ secrets.CI_BUILD_KEY }}
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          persist-credentials: false
-          fetch-depth: 0
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.9'
-      - if: matrix.platform == 'windows'
-        uses: actions/cache@v2
-        with:
-          path: release/installbuilder/setup
-          key: installbuilder
-      - run: pip install -e .[dev]
-      - run: python release/cibuild.py build
-      # artifacts must have different names, see https://github.com/actions/upload-artifact/issues/24
-      - uses: actions/upload-artifact@v2
-        with:
-          name: binaries.${{ matrix.platform }}
-          path: release/dist
-
   # Separate from everything else because slow.
   build-and-deploy-docker:
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
     environment: deploy-docker
-    needs: [ test, test-web-ui, build ]
+    needs:
+     - test
+     - test-web-ui
+     - build
+     - docs
     runs-on: ubuntu-latest
     env:
       CI_BUILD_DOCKER: 1
@@ -206,8 +210,12 @@ jobs:
     # In particular, we don't blindly `pip install` anything to minimize the risk of supply chain attacks.
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
     environment: deploy
+    needs:
+      - test
+      - test-web-ui
+      - build
+      - docs
     runs-on: ubuntu-latest
-    needs: [test, test-web-ui, build, docs]
     env:
       TWINE_USERNAME: mitmproxy
       TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
