--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -228,7 +228,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-      - run: apt-get install -y twine awscli
+      - run: sudo apt-get install -y twine awscli
       - uses: actions/download-artifact@v2
         with:
           path: release/dist
